tests/ui/trait-bound-not-satisfied.stderr
error[E0277]: the trait bound `usize: Trait` is not satisfied
 --> tests/ui/trait-bound-not-satisfied.rs:7:1
  |
7 | #[penum[ (T) where T: Trait ]]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `usize`
  |
  = help: see issue #48214
  = note: this error originates in the attribute macro `penum` (in Nightly builds, run with -Z macro-backtrace for more info)
